--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup .NET (use global.json if present)
         uses: actions/setup-dotnet@v4
         with:
-          global-json-file: global.json
+          dotnet-version: "8.0.x"
 
       - name: Publish (single-file, self-contained)
         shell: pwsh
