--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,10 @@ permissions:
 jobs:
   build_release:
     runs-on: windows-latest
-
+     defaults:
+      run:
+        working-directory: WinSxSCleanupTool
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
