--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   build_release:
     runs-on: windows-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,17 +21,39 @@ jobs:
         with:
           dotnet-version: "8.0.x"
 
-     - name: Publish (single-file, self-contained)
-    shell: pwsh
-   run: |
-    dotnet restore ./WinSxSCleanupTool.csproj
-    dotnet publish ./WinSxSCleanupTool.csproj -c Release -r win-x64 --self-contained true -o ./_publish/win-x64 `
-      /p:PublishSingleFile=true `
-      /p:PublishTrimmed=false `
-      /p:IncludeNativeLibrariesForSelfExtract=true `
-      /p:EnableCompressionInSingleFile=true `
-      /p:ApplicationManifest=app.release.manifest
+      - name: Debug repo layout
+        shell: pwsh
+        run: |
+          Write-Host "PWD:"
+          pwd
+          Write-Host "`nRepo root listing:"
+          dir
+          Write-Host "`nCSProj found:"
+          dir -Recurse -Filter *.csproj
 
+      - name: Publish (single-file, self-contained, UAC manifest)
+        shell: pwsh
+        run: |
+          $csproj = ".\WinSxSCleanupTool.csproj"
+          if (!(Test-Path $csproj)) {
+            Write-Host "ERROR: csproj not found at $csproj"
+            Write-Host "Found csproj files:"
+            dir -Recurse -Filter *.csproj
+            exit 1
+          }
+
+          dotnet --info
+          dotnet restore $csproj
+
+          dotnet publish $csproj -c Release -r win-x64 --self-contained true -o .\_publish\win-x64 `
+            /p:PublishSingleFile=true `
+            /p:PublishTrimmed=false `
+            /p:IncludeNativeLibrariesForSelfExtract=true `
+            /p:EnableCompressionInSingleFile=true `
+            /p:ApplicationManifest=app.release.manifest
+
+          Write-Host "`nPublished files:"
+          dir .\_publish\win-x64 -Force
 
       - name: Zip artifact + SHA256
         shell: pwsh
@@ -41,20 +63,22 @@ jobs:
 
           $publishDir = ".\_publish\win-x64"
           if (!(Test-Path $publishDir)) {
-            Write-Host "Publish dir not found: $publishDir"
-            Get-ChildItem . -Force
+            Write-Host "ERROR: Publish dir not found: $publishDir"
+            dir -Recurse .\_publish -Force
             exit 1
           }
 
           $exe = Get-ChildItem $publishDir -Filter *.exe -File | Select-Object -First 1
           if (-not $exe) {
-            Write-Host "EXE not found in: $publishDir"
-            Get-ChildItem $publishDir -Force
+            Write-Host "ERROR: EXE not found in: $publishDir"
+            dir $publishDir -Force
             exit 1
           }
 
           Compress-Archive -Path $exe.FullName -DestinationPath $zip -Force
-          (Get-FileHash $zip -Algorithm SHA256).Hash | Out-File "SHA256.txt" -Encoding ascii
+
+          $sha = (Get-FileHash $zip -Algorithm SHA256).Hash.ToLower()
+          "SHA256  $zip  $sha" | Out-File "SHA256.txt" -Encoding ascii
 
           Write-Host "Built: $zip"
           Write-Host "SHA-256:"
@@ -64,6 +88,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            WinSxSCleanupTool/WinSxSCleanupTool/WinSxS-Cleanup-Tool-*.zip
-            WinSxSCleanupTool/WinSxSCleanupTool/SHA256.txt
+            WinSxS-Cleanup-Tool-*.zip
+            SHA256.txt
           generate_release_notes: true
