--- a/WinSxSCleanupTool.csproj
+++ b/WinSxSCleanupTool.csproj
@@ -7,10 +7,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 
-    <Version>1.0.5</Version>
-    <AssemblyVersion>1.0.5.0</AssemblyVersion>
-    <FileVersion>1.0.5.0</FileVersion>
-    <InformationalVersion>1.0.5</InformationalVersion>
+    <Version>1.0.7</Version>
+    <AssemblyVersion>1.0.7.0</AssemblyVersion>
+    <FileVersion>1.0.7.0</FileVersion>
+    <InformationalVersion>1.0.7</InformationalVersion>
+    
 
     <AssemblyTitle>WinSxS Cleanup Tool</AssemblyTitle>
     <Product>WinSxS Cleanup Tool</Product>
@@ -27,6 +28,20 @@
   <!-- Release: UAC 강제 O -->
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <ApplicationManifest>app.release.manifest</ApplicationManifest>
+
+    <!-- (권장) AssemblyVersion은 고정: 바인딩 문제 방지 -->
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+
+    <!-- “제품 버전(Version)”은 사람이 관리 (메이저/마이너 정도) -->
+    <Version>1.0.7</Version>
+
+    <!-- 빌드 시점 기반 자동 버전 -->
+    <!-- Format: yyyy.doy.HHMM (예: 2026.003.0612) -->
+    <FileVersion>$([System.DateTime]::Now.ToString("yyyy")).$([System.DateTime]::Now.DayOfYear.ToString("000")).$([System.DateTime]::Now.ToString("HHmm")).0</FileVersion>
+
+    <!-- 어바웃 창 등에서 보여줄 “표시용 버전 문자열” -->
+    <InformationalVersion>$(Version)+build.$([System.DateTime]::Now.ToString("yyyyMMdd-HHmm"))</InformationalVersion>
+    
   </PropertyGroup>
 
   <ItemGroup>
