--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,15 +5,21 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+
 jobs:
-  release:
+  build_and_release:
+    name: Build + Publish + GitHub Release
     runs-on: windows-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Setup .NET
+      - name: Setup .NET (8.x)
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "8.0.x"
@@ -28,87 +34,76 @@ jobs:
         run: |
           dotnet build -c Release --no-restore
 
-      - name: Run release.cmd
-        shell: cmd
-        run: |
-          cd /d "%GITHUB_WORKSPACE%"
-          dir
-          call .\release.cmd
-
-      - name: Zip EXE + generate SHA256
+      # --------------------------
+      # Publish (single-file EXE)
+      # --------------------------
+      - name: Publish (win-x64, self-contained, single file)
         shell: pwsh
         run: |
-          $tag = "${{ github.ref_name }}"
-          $zip = "WinSxS-Cleanup-Tool-$tag-win-x64.zip"
+          $ErrorActionPreference = "Stop"
 
-          $exe = Get-ChildItem .\_publish\win-x64 -Filter *.exe -File | Select-Object -First 1
-          if (-not $exe) {
-            throw "EXE not found in _publish/win-x64"
-          }
+          $rid = "win-x64"
+          $out = Join-Path $env:GITHUB_WORKSPACE "dist\$rid"
+          New-Item -ItemType Directory -Force -Path $out | Out-Null
 
-          Compress-Archive -Path $exe.FullName -DestinationPath $zip -Force
+          # csproj가 루트에 있다고 가정 (일반적인 구조)
+          # 만약 경로가 다르면 여기만 바꾸면 됨.
+          $proj = "WinSxSCleanupTool.csproj"
 
-          $sha = (Get-FileHash $zip -Algorithm SHA256).Hash.ToLower()
-          "SHA256  $zip  $sha" | Out-File SHA256.txt -Encoding ascii
+          dotnet publish $proj -c Release -r $rid `
+            --self-contained true `
+            -o $out `
+            /p:PublishSingleFile=true `
+            /p:IncludeNativeLibrariesForSelfExtract=true
 
-          Write-Host "ZIP: $zip"
-          Write-Host "SHA256: $sha"
+          Write-Host "Published to: $out"
+          Get-ChildItem $out | Select-Object Name, Length
 
-      - name: Prepare release body from RELEASE_NOTES.md (strict)
+      # --------------------------
+      # Package (ZIP + SHA256)
+      # --------------------------
+      - name: Package (zip)
         shell: pwsh
         run: |
-          $tag = "${{ github.ref_name }}"
-          $notes = "RELEASE_NOTES.md"
-          $out = "release_body.md"
+          $ErrorActionPreference = "Stop"
 
-          if (-not (Test-Path $notes)) {
-            throw "RELEASE_NOTES.md not found."
-          }
+          $tag = "${{ github.ref_name }}"   # vX.Y.Z
+          $rid = "win-x64"
+          $dist = Join-Path $env:GITHUB_WORKSPACE "dist\$rid"
 
-          $lines = Get-Content $notes
-          $start = ($lines | Select-String -SimpleMatch "## $tag").LineNumber
-          if (-not $start) {
-            throw "Section not found: ## $tag"
-          }
+          if (!(Test-Path $dist)) { throw "dist folder not found: $dist" }
 
-          $startIdx = $start - 1
-          $endIdx = $lines.Count
-          for ($i = $startIdx + 1; $i -lt $lines.Count; $i++) {
-            if ($lines[$i] -match '^##\s+v\d+\.\d+\.\d+') {
-              $endIdx = $i
-              break
-            }
-          }
+          $zipName = "WinSxSCleanupTool-$tag-$rid.zip"
+          $zipPath = Join-Path $env:GITHUB_WORKSPACE $zipName
 
-          $section = $lines[$startIdx..($endIdx-1)] -join "`n"
+          if (Test-Path $zipPath) { Remove-Item $zipPath -Force }
 
-          if ($section -match '\(write here\)') {
-            throw "Placeholders '(write here)' remain in RELEASE_NOTES.md"
-          }
+          Compress-Archive -Path (Join-Path $dist "*") -DestinationPath $zipPath -Force
 
-          # 이전 태그 찾아 compare 링크 생성
-          git fetch --tags origin | Out-Null
-          $prev = (git tag --list "v*" --sort=-v:refname | Where-Object { $_ -ne $tag } | Select-Object -First 1)
+          $hash = (Get-FileHash -Algorithm SHA256 $zipPath).Hash.ToLower()
+          $shaPath = "$zipPath.sha256"
+          "$hash  $zipName" | Out-File -Encoding ascii -NoNewline $shaPath
 
-          $repo = "${{ github.repository }}"
-          $header = @()
+          "ZIP=$zipPath" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+          "SHA=$shaPath" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
 
-          if ($prev) {
-            $header += "🔎 Compare: $prev → $tag"
-            $header += "https://github.com/$repo/compare/$prev...$tag"
-            $header += ""
-            $header += "---"
-            $header += ""
-          }
+          Write-Host "Created: $zipPath"
+          Write-Host "Created: $shaPath"
+          Write-Host "SHA256 : $hash"
 
-          ($header -join "`n") + $section | Out-File $out -Encoding utf8
-          Write-Host "Release body prepared."
-
-      - name: Create GitHub Release
+      # --------------------------
+      # Create GitHub Release
+      # - Release body from RELEASE_NOTES.md
+      # - Upload assets (zip + sha256)
+      # --------------------------
+      - name: Create GitHub Release (notes + assets)
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
+          body_path: RELEASE_NOTES.md
           files: |
-            WinSxS-Cleanup-Tool-*.zip
-            SHA256.txt
-          body_path: release_body.md
-          generate_release_notes: false
+            ${{ env.ZIP }}
+            ${{ env.SHA }}
+          draft: false
+          prerelease: false
