--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,46 +8,97 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
-  build:
+  release:
     runs-on: windows-latest
+    env:
+      DOTNET_CLI_TELEMETRY_OPTOUT: "1"
+      DOTNET_NOLOGO: "1"
+      RID: win-x64
+      PROJ: WinSxSCleanupTool.csproj
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
 
-      - name: Publish (single-file exe)
+      - name: Publish (single exe)
         shell: pwsh
         run: |
-          dotnet publish `
+          $ErrorActionPreference = "Stop"
+
+          $out = Join-Path $env:GITHUB_WORKSPACE "dist"
+          if (Test-Path $out) { Remove-Item $out -Recurse -Force }
+          New-Item -ItemType Directory -Force -Path $out | Out-Null
+
+          dotnet publish $env:PROJ `
             -c Release `
-            -r win-x64 `
+            -r $env:RID `
             --self-contained true `
             /p:PublishSingleFile=true `
             /p:IncludeNativeLibrariesForSelfExtract=true `
             /p:EnableCompressionInSingleFile=true `
-            -o dist
+            -o $out
 
-      - name: Package ZIP + SHA256
+          $exe = Get-ChildItem $out -Filter *.exe -File | Select-Object -First 1
+          if (-not $exe) { throw "EXE not found in dist" }
+
+          "EXE=$($exe.FullName)" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+
+      - name: Package (exe zip + sha256)
         shell: pwsh
         run: |
+          $ErrorActionPreference = "Stop"
+
           $tag = "${{ github.ref_name }}"
-          $zip = "WinSxSCleanupTool-$tag-win-x64.zip"
+          $zipName = "WinSxSCleanupTool-$tag-$env:RID.zip"
+          $zipPath = Join-Path $env:GITHUB_WORKSPACE $zipName
 
-          Compress-Archive dist\* $zip -Force
+          if (Test-Path $zipPath) { Remove-Item $zipPath -Force }
+          Compress-Archive -Path $env:EXE -DestinationPath $zipPath -Force
 
-          $hash = (Get-FileHash $zip -Algorithm SHA256).Hash.ToLower()
-          "$hash  $zip" | Out-File "$zip.sha256" -Encoding ascii
+          $hash = (Get-FileHash -Algorithm SHA256 $zipPath).Hash.ToLower()
+          $shaPath = "$zipPath.sha256"
+          "$hash  $zipName" | Out-File -Encoding ascii -NoNewline $shaPath
 
-      - name: Create GitHub Release
+          "ZIP=$zipPath" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+          "SHA=$shaPath" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+
+      - name: Release notes source
+        id: notes
+        shell: pwsh
+        run: |
+          if (Test-Path "RELEASE_NOTES.md") {
+            "use_file=true"  | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8
+          } else {
+            "use_file=false" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8
+          }
+
+      - name: Create GitHub Release (RELEASE_NOTES.md)
+        if: steps.notes.outputs.use_file == 'true'
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            *.zip
-            *.sha256
+            ${{ env.ZIP }}
+            ${{ env.SHA }}
+          body_path: RELEASE_NOTES.md
+          generate_release_notes: false
+
+      - name: Create GitHub Release (auto notes)
+        if: steps.notes.outputs.use_file != 'true'
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            ${{ env.ZIP }}
+            ${{ env.SHA }}
           generate_release_notes: true
