--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,99 +1,78 @@
-name: Release
+name: Release (Windows x64)
 
 on:
   push:
     tags:
       - "v*"
+  workflow_dispatch:
 
 permissions:
   contents: write
 
-concurrency:
-  group: release-${{ github.ref }}
-  cancel-in-progress: false
-
 jobs:
-  release:
+  build-and-release:
     runs-on: windows-latest
-    env:
-      PROJ: WinSxSCleanupTool.csproj
-      RID: win-x64
-      DOTNET_CLI_TELEMETRY_OPTOUT: "1"
-      DOTNET_NOLOGO: "1"
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
         with:
-          fetch-depth: 0
+          dotnet-version: "8.0.x"
 
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
+      - name: Clean
+        run: dotnet clean
 
-      - name: Publish (single-file exe)
+      - name: Publish (self-contained, single-file, ko only)
+        shell: cmd
+        run: >
+          dotnet publish WinSxSCleanupTool.csproj
+          -c Release
+          -r win-x64
+          --self-contained true
+          -p:PublishSingleFile=true
+          -p:EnableCompressionInSingleFile=true
+          -p:SatelliteResourceLanguages=ko
+          -o Publish
+
+      - name: Remove debug/doc junk
+        shell: cmd
+        run: >
+          del /q Publish\*.pdb 2>nul & del /q Publish\*.xml 2>nul
+
+      - name: Zip (Publish -> artifact)
         shell: pwsh
         run: |
-          $ErrorActionPreference = "Stop"
+          $tag = "${{ github.ref_name }}"      # v1.0.9
+          $ver = $tag.TrimStart('v')           # 1.0.9
+          $zip = "WinSxSCleanupTool_v$ver_win-x64.zip"
+          if (Test-Path $zip) { Remove-Item $zip -Force }
+          Compress-Archive -Path "Publish\*" -DestinationPath $zip -Force
+          "ZIP_NAME=$zip" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+          "APP_VER=$ver" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
 
-          $out = "$env:GITHUB_WORKSPACE\dist"
-          if (Test-Path $out) { Remove-Item $out -Recurse -Force }
-          New-Item -ItemType Directory -Force -Path $out | Out-Null
-
-          dotnet publish $env:PROJ `
-            -c Release `
-            -r $env:RID `
-            --self-contained true `
-            /p:PublishSingleFile=true `
-            /p:IncludeNativeLibrariesForSelfExtract=true `
-            /p:EnableCompressionInSingleFile=true `
-            -o $out
-
-          $exe = Get-ChildItem $out -Filter *.exe | Select-Object -First 1
-          if (-not $exe) { throw "EXE not found" }
-
-          "EXE=$($exe.FullName)" | Out-File $env:GITHUB_ENV -Append -Encoding utf8
-
-      - name: Package (exe only)
-        shell: pwsh
-        run: |
-          $ErrorActionPreference = "Stop"
-
-          $tag = "${{ github.ref_name }}"
-          $zip = "WinSxSCleanupTool-$tag-win-x64.zip"
-
-          Compress-Archive $env:EXE $zip -Force
-
-          $hash = (Get-FileHash $zip -Algorithm SHA256).Hash.ToLower()
-          "$hash  $zip" | Out-File "$zip.sha256" -Encoding ascii -NoNewline
-
-          "ZIP=$zip" | Out-File $env:GITHUB_ENV -Append -Encoding utf8
-          "SHA=$zip.sha256" | Out-File $env:GITHUB_ENV -Append -Encoding utf8
-
-      - name: Decide release notes source
-        id: notes
-        shell: pwsh
-        run: |
-          if (Test-Path "RELEASE_NOTES.md") {
-            "use_file=true" | Out-File $env:GITHUB_OUTPUT -Append -Encoding utf8
-          } else {
-            "use_file=false" | Out-File $env:GITHUB_OUTPUT -Append -Encoding utf8
-          }
-
-      - name: Create GitHub Release (notes file)
-        if: steps.notes.outputs.use_file == 'true'
+      - name: Create GitHub Release (templated notes)
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            ${{ env.ZIP }}
-            ${{ env.SHA }}
-          body_path: RELEASE_NOTES.md
-          generate_release_notes: false
+          files: ${{ env.ZIP_NAME }}
+          name: WinSxS Cleanup Tool v${{ env.APP_VER }}
+          body: |
+            ## 🧹 WinSxS Cleanup Tool v${{ env.APP_VER }}
 
-      - name: Create GitHub Release (auto notes)
-        if: steps.notes.outputs.use_file != 'true'
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            ${{ env.ZIP }}
-            ${{ env.SHA }}
-          generate_release_notes: true
+            ### ✨ 개선 사항
+            - UX 메시지 개선
+            - 정리/분석 결과 요약 강조
+
+            ### 🛠 안정화
+            - Publish 구조 안정화
+            - Self-contained 배포 결과물 정리
+
+            ### 📦 배포 정보
+            - Windows x64
+            - .NET 런타임 불필요 (Self-contained)
+            - ZIP 배포
+
+            ---
+            📜 전체 변경 내역: [CHANGELOG.md](./CHANGELOG.md)
